# weegames

./: .gitignore  NOTICE  README.md  cargo.toml
editor/: Cargo.toml  config.yaml
editor/msvc/lib/64/: csfml-audio.lib
editor/src/: editor.rs  lib.rs  main.rs
main-game/: Cargo.toml  config.yaml  index.html  mq_js_bundle_0.3.1.js
main-game/games/: attribution.txt  tmp.json
main-game/games/bops/: arm.json  berry.json  bird-dead-end.json  bird-leap.json  bird-paint.json  bird.json  bird2.json  boss.json  bowl.json  cloud.json  crisps.json  fruit.json  game-over.json  interlude.json  photo.json  prelude.json  road.json  sandwich.json  simple-bird.json  wasp2.json
main-game/games/bops/images/: daily-news.xcf
main-game/games/colours/: green.json
main-game/games/editor/: anoldereditor.json  assets-editor.json  background-editor.json  editor.json  game-editor.json  object-editor.json  temp.json  test.json
main-game/games/mine/: bong.json
main-game/games/rehashes/: wasp2.json
main-game/games/second/: bike.json  boss.json  break.json  dawn.json  disc.json  explosion.json  game-over.json  gravity.json  interlude.json  jump.json  knock.json  mine.json  prelude.json  racer.json  slide.json  stealth.json  swim.json  tanks.json  time.json
main-game/games/system/: choose-mode.json  game-over.json  interlude.json  loading-screen.json  main-menu-1.json  main-menu-full.json  pause-menu.json  prelude.json
main-game/games/yeah/: baby.json  balloon.json  bird.json  boss.json  boxer.json  cannon.json  cat.json  disgrace.json  hiding.json  mask.json  monkey.json  orange.json  parachute.json  piano.json  planes.json  pumpkin.json  puzzle.json  quake.json  rhinos.json  shake.json  shed.json  titanic.json  wasp.json
main-game/games/yeah/audio/: pop.flac
main-game/msvc/lib/32/: csfml-audio.lib
main-game/shaders/: rect.frag  rect.vert
main-game/src/: main.rs
sdlglue/: Cargo.toml
sdlglue/src/: lib.rs
wee/: Cargo.toml
wee-common/: Cargo.toml
wee-common/src/: lib.rs
wee/saved-runs/: baby-lost.savedrun  baby-won.savedrun  balloon-lost.savedrun  balloon-won.savedrun  bike-lost.savedrun  bike-won.savedrun  bird-lost.savedrun  bird-won.savedrun  bong-lost.savedrun  bong-won.savedrun  boss-lost (2).savedrun  boss-lost.savedrun  boss-won (2).savedrun  boss-won.savedrun  bowl-lost.savedrun  bowl-won.savedrun  boxer-lost.savedrun  boxer-won.savedrun  break-lost.savedrun  break-won.savedrun  cannon-lost.savedrun  cannon-won.savedrun  cat-lost.savedrun  cat-won.savedrun  cloud-lost.savedrun  cloud-won.savedrun  dawn-lost.savedrun  dawn-won.savedrun  disc-lost.savedrun  disc-won.savedrun  disgrace-lost.savedrun  disgrace-won.savedrun  explosion-lost.savedrun  explosion-won.savedrun  gravity-lost.savedrun  gravity-won.savedrun  hiding-lost.savedrun  hiding-won.savedrun  jump-lost.savedrun  jump-won.savedrun  (+44 more)
wee/src/: lib.rs
weegames/: Cargo.toml  config.yaml
weegames/games/: tmp.json
weegames/games/mine/: bong.json
weegames/games/second/: bike.json  boss.json  break.json  explosion.json  game-over.json  gravity.json  interlude.json  jump.json  knock.json  mine.json  prelude.json  racer.json  slide.json  stealth.json  swim.json  tanks.json  tanks2.json  time.json
weegames/games/system/: choose-mode.json  game-over.json  interlude.json  main-menu.json  pause-menu.json  prelude.json
weegames/games/yeah/: baby.json  balloon.json  bird.json  boss.json  boxer.json  cannon.json  cat.json  disgrace.json  hiding.json  mask.json  monkey.json  orange.json  parachute.json  piano.json  planes.json  pumpkin.json  puzzle.json  quake.json  rhinos.json  shake.json  shed.json  test.json  titanic.json  wasp.json
weegames/msvc/lib/32/: csfml-system.lib
weegames/msvc/lib/64/: csfml-system.lib
weegames/shaders/: sprite.frag  sprite.vert
weegames/src/: main.rs
