[package]
name = "editor"
version = "0.1.0"
authors = ["Ross <yeahross@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.3.0"
log = "0.4.8"
nfd = { git = "https://github.com/saurvs/nfd-rs.git" }
wee-common = { path = "../wee-common" }
wee = { path = "../wee" }
sdlglue = { path = "../sdlglue" }