[package]
name = "editor"
version = "0.2.0"
authors = ["Ross <yeahross@protonmail.com>"]
edition = "2018"

[dependencies]
imgui = "0.3.0"
rand = "0.7.3"
gl = "0.10.0"
log = "0.4.8"
simple_logger = "1.6.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8.12"
walkdir = "2.3.1"
wee-common = { path = "../wee-common" }
wee = { path = "../wee" }
nfd = { git = "https://github.com/saurvs/nfd-rs.git", rev = "07578c5" }
imgui-opengl-renderer = "0.7.0"
imgui-sdl2 = "0.9.0"
bincode = "1.3.3"
c2 = "0.2.0"
bracket-random = "0.8.2"
indexmap = "1.7.0"
sdlglue = { path = "../sdlglue" }

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["image", "ttf"]

[dependencies.sfml]
version = "0.15.1"
default-features = false
features = ["audio"]