[package]
name = "main-game"
version = "0.2.1"
authors = ["Ross <yeahross@protonmail.com>"]
edition = "2018"

[dependencies]
macroquad = { git = "https://github.com/yeahross0/macroquad", rev = "8f679d2" }
c2 = "0.2.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
indexmap = "1.3.2"
rand = "0.7.3"
wee = { path = "../wee" }
wee-common = { path = "../wee-common" }
futures = "0.3.8"
walkdir = "2.3.1"

[target.'cfg(wasm32)'.dependencies]
quad-storage = "0.1.3"

[features]
wasm_packaged = []