[package]
name = "wee"
version = "0.1.0"
authors = ["Ross <yeahross@protonmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.111", features = ["derive"] }
log = "0.4.8"
indexmap = "1.3.2"
c2 = "0.1.0"
serde_json = "1.0.53"
sdlglue = { path = "../sdlglue" }
wee-common = { path = "../wee-common" }

[dependencies.sfml]
version = "0.15.1"
default-features = false
features = ["audio"]

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["image", "ttf"]