[package]
name = "wee"
version = "0.1.0"
authors = ["Ross <yeahross@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
indexmap = "1.3.2"
c2 = "0.2.0"
wee-common = { path = "../wee-common" }

[dev-dependencies]
bracket-random = "0.8.2"
bincode = "1.3.3"