[package]
name = "weegames"
version = "0.1.0"
authors = ["Ross <yeahross@protonmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
gl = "0.10.0"
imgui-opengl-renderer = "0.7.0"
imgui-sdl2 = "0.9.0"
imgui = "0.3.0"
log = "0.4.8"
simple_logger = "1.6.0"
nfd = { git = "https://github.com/saurvs/nfd-rs.git" }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8.12"
walkdir = "2.3.1"
wee-common = { path = "../wee-common" }
wee = { path = "../wee" }
sdlglue = { path = "../sdlglue" }
editor = { path = "../editor" }

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["image", "ttf"]